[project]
name = "qiskit-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pylatexenc>=2.10",
    "pyscf>=2.12.1",
    "qiskit>=2.3.0",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "qiskit-ibm-runtime>=0.45.0",
    "qiskit-nature>=0.7.2",
    "qiskit-machine-learning>=0.9.0",
    "scipy>=1.17.0",
    "scvi-tools>=1.4.1",
    "torch>=2.6.0",
    "imageio"
]
